--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     <div class="col-lg-4 col-md-7  mx-auto">
                         <div class="card py-3 shadow-sm">
                             <figure>
-                                <img src="img/catering.jpg" alt="catering" class="img-fluid rounded-circle">
+                                <img src="img/CATERING.jpg" alt="catering" class="img-fluid rounded-circle">
 
                             </figure>
                             <div class="card-body ">
